# qadataswap

./: .gitignore  API.md  CLAUDE.md  CMakeLists.txt  Cargo.toml  EXAMPLES.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-wheels.yml  test.yml
examples/cpp/: CMakeLists.txt  basic_example.cpp  build.sh  cross_language_reader.cpp  cross_language_writer.cpp  performance_test.cpp
examples/python/: basic_example.py  debug_import.py  direct_test.py  simple_test.py  test_complete_version.py
examples/rust/: Cargo.toml  README.md  build.sh
examples/rust/src/: basic_example.rs  cross_language_reader.rs  cross_language_writer.rs  lib.rs  performance_test.rs
scripts/: build_all.sh  release.py  test_all.sh
src/cpp/include/: qadataswap_core.h
src/cpp/src/: ffi_interface.cpp  shared_memory_arena.cpp  simple_arena.cpp
src/python/: MANIFEST.in  README.md  build_wheel.py  pyproject.toml  qadataswap_py.cpp  qadataswap_simple.cpp  setup.py  setup_simple.py  upload_to_pypi.py
src/python/cpp/include/: simple_arena.h
src/python/qadataswap/: __init__.py
src/rust/: Cargo.toml  build.rs
src/rust/src/: lib.rs
tests/integration/: test_cross_language.py
tests/performance/: benchmark_all.py  benchmark_python.py
