[workspace]
members = ["src/rust"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/your-org/qadataswap"
keywords = ["polars", "arrow", "shared-memory", "zero-copy", "ipc"]
categories = ["science", "data-structures", "memory-management"]

[workspace.dependencies]
# Updated to 0.51 to match qars2 main project
# Note: 'streaming' feature removed in 0.51, using available features instead
polars = { path = "../polars/crates/polars", default-features = false, features = ["lazy", "ipc", "parquet", "fmt", "temporal"] }

libc = "0.2"
memmap2 = "0.7"
thiserror = "1.0"
anyhow = "1.0"
bytes = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# For FFI with C++ core
cxx = "1.0"
bindgen = "0.68"

# Development dependencies
criterion = "0.5"
tempfile = "3.0"
rand = "0.8"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
inherits = "release"
debug = true